[package]
name = "rt-navi"
version = "0.0.1"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "High precision navigation in real time"
homepage = "https://github.com/rtk-rs/rt-navi"
repository = "https://github.com/rtk-rs/rt-navi"
keywords = ["navigation", "gps", "glonass", "galileo", "timing"]
categories = [
    "science",
    "science::geo",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"

[features]

# Default features
#  - UBX v23 protocol
#  - Support of RTCM frames from ublox
default = ["ubx_proto23", "rtcm"]

# Select U-Blox v14 protocol
ubx_proto14 = ["ublox/ubx_proto14"]

# Select U-Blox v23 protocol
ubx_proto23 = ["ublox/ubx_proto23"]

# Select U-Blox v27 protocol
ubx_proto27 = ["ublox/ubx_proto27"]

# Select U-Blox v31 protocol
ubx_proto31 = ["ublox/ubx_proto31"]

# Ulock RTCM frames download
rtcm = ["dep:rtcm-rs"]

[dependencies]
log = "0.4"
thiserror = "2"
env_logger = "0.11.8"
chrono = "0.4.29"
nalgebra = "0.33"

ratatui = { version = "0.29", features = ["crossterm"] }
# tui-logger = { version = "0.17", features = ["crossterm", "tracing-support"] }

serialport = "4.7"
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5", features = ["derive", "color"] }

# ublox = { git = "https://github.com/ublox-rs/ublox", branch = "master", features = ["std", "ubx_proto23", "sfrbx-gps"] }
# ublox = { path = "../../ublox/ublox", features = ["std", "sfrbx-gps"] }
ublox = { git = "https://github.com/ublox-rs/ublox", branch = "master", features = ["std", "ubx_proto23", "sfrbx-gps"]  }

gnss-protos = { version = "0.0.2", features = ["gps"] }
# gnss-protos = { git = "https://github.com/rtk-rs/gnss-protos", features = "gps" }
# gnss-protos = { path = "../gnss-protos", features = ["gps"] }

rtcm-rs = { version = "0.11", optional = true }

hifitime = { version = "4.0", features = ["serde", "std"] }
anise = { git = "https://github.com/nyx-space/anise", branch = "dep/hifitime-github", features = ["embed_ephem"] }

gnss-rs = { version = "2.3.5", features = ["serde"] }
# gnss-rtk = { path = "../gnss-rtk", features = ["serde"] }
gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", branch = "main", features = ["serde"] }

# gpx = { version = "0.10", optional = true }
# kml = { version = "0.8", optional = true }
