[package]
name = "rt-navi"
version = "0.0.1"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "High precision navigation in real time"
homepage = "https://github.com/rtk-rs/rt-navi"
repository = "https://github.com/rtk-rs/rt-navi"
keywords = ["navigation", "gps", "glonass", "galileo", "timing"]
categories = [
    "science",
    "science::geo",
    "command-line-interface",
    "command-line-utilities",
]
edition = "2021"
readme = "README.md"

[features]

# U-Blox v23 by default
default = ["ubx_proto23"]

# Select U-Blox v14 protocol
ubx_proto14 = ["ublox/ubx_proto14"]

# Select U-Blox v23 protocol
ubx_proto23 = ["ublox/ubx_proto23"]

# Select U-Blox v27 protocol
ubx_proto27 = ["ublox/ubx_proto27"]

# Select U-Blox v31 protocol
ubx_proto31 = ["ublox/ubx_proto31"]

[dependencies]
log = "0.4"
thiserror = "2"
env_logger = "0.11.8"
chrono = "0.4.29"
nalgebra = "0.33"
serialport = "4.7"
gnss-rs = "2.4.0"
rtcm-rs = { version = "0.11", optional = true }
tokio = { version = "1.45.0", features = ["full"] }
clap = { version = "4.5", features = ["derive", "color"] }
hifitime = { version = "4.1", features = ["std"] }
anise = { version = "0.6", features = ["embed_ephem"] }

gnss-protos = { version = "0.0.2", features = ["gps"] }
# gnss-protos = { path = "../gnss-protos", features = ["gps"] }

ratatui = { version = "0.29", features = ["crossterm"] }
# tui-logger = { version = "0.17", features = ["crossterm", "tracing-support"] }

gnss-rtk = { git = "https://github.com/rtk-rs/gnss-rtk", rev = "1455e3a600ea27def1c9550359d27461cb7e8be5" }
ublox = { git = "https://github.com/ublox-rs/ublox", rev = "2fa6761b2ccd4344326ad55f0dadc5965e06e957", features = ["std", "ubx_proto23", "sfrbx-gps"]  }

# gpx = { version = "0.10", optional = true }
# kml = { version = "0.8", optional = true }
